<resources>
    <string name="app_name">Uebung</string>

    <string name="results">Your results will be displayed here!</string>
    <string name="test">test</string>
    <string name="headlinemainactivity">Please select a activity</string>
    <string name="selectCountry">Please select a country:</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_listv_view">ListViewActivity</string>
    <string name="own_adapter_listview_label">Top 10 Christmas Hits</string>
    <string name="select_a_date">Please select a date:</string>
    <string name="select_a_time">Please select a time:</string>
    <string name="picker_activity_label">Picker Activity</string>
    <string name="last_selected_values">The last selected Values are:</string>
    <string name="json_activity_label">JSON Playground</string>
    <string name="create_json">Create JSON</string>


        <string name="cb1">Checkbox1</string>
        <string name="cb2">Checkbox2</string>
        <string name="cb3">Checkbox3</string>
        <string name="cb4">Checkbox4</string>
        <string name="cb5">Checkbox5</string>
        <string name="np">Next Practise</string>

        <string name="rb1">RadioButton1</string>
        <string name="rb2">RadioButton2</string>
        <string name="rb3">RadioButton3</string>
        <string name="rb4">RadioButton4</string>
        <string name="rb5">RadioButton5</string>

    <string-array name="autocompleteCountry">
        <item name="germany">Germany</item>
        <item name="france">France</item>
        <item name="italy">Italy</item>
        <item name="netherlands">Netherlands</item>
        <item>Irland</item>
        <item>Great Britain</item>
        <item>India</item>
        <item>United States</item>
        <item>New Zealand</item>
        <item>Australia</item>
        <item>Belgium</item>
        <item>Turkey</item>
        <item>Israel</item>
        <item>Switzerland</item>
        <item>Poland</item>
        <item>China</item>
        <item>Asia</item>
        <item>Japan</item>
        <item>Syria</item>
        <item>Norway</item>
        <item>Finland</item>
        <item>Austria</item>
    </string-array>

    <string-array name="availableActivities">
        <item>Checkbox</item>
        <item>Radiobutton</item>
        <item>Autocomplete</item>
        <item>Switcher and Bluetooth (No VM)</item>
        <item>Dropdown</item>
        <item>Listview</item>
        <item>Own Layout/Adapter ListView</item>
        <item>PickerActivity</item>
        <item>JSON Playground</item>
        <item>SQLite Database Playground</item>
        <item>Active Android Playground - Improved Edition</item>
    </string-array>

    <string-array name="top10_christmas_hits_songtitles">
        <item>Happy Xmas</item>
        <item>Father Christmas</item>
        <item>Wonderful Christmastime</item>
        <item>Santa Claus Is Coming to Town</item>
        <item>Sock It to Me Santa</item>
        <item>Thank god it\u0027s Christmas</item>
        <item>Little Drummer Boy</item>
        <item>Christmas All Over Again</item>
        <item>Christmas Time Is Here Again</item>
        <item>2000 Miles</item>
    </string-array>

    <string-array name="top10_christmas_hits_artists">
        <item>John \u0026 Yoko</item>
        <item>The Kinks</item>
        <item>Paul McCartney \u0026 Wings</item>
        <item>Bruce Springsteen</item>
        <item>Bob Seger \u0026 the Last Heard</item>
        <item>Queen</item>
        <item>David Bowie \u0026 Bing Cosby</item>
        <item>Tom Petty \u0026 the Heartbreakers</item>
        <item>The Beatles</item>
        <item>The Pretenders</item>
    </string-array>
    <string name="title_activity_activeandroid">ActiveAndroid Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_database_playground_activtiy">Database Playground</string>
    <string name="title_activity_active_android_improved">ActiveAndroid Improved</string>

</resources>
