<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="Radiobutton Practise"
        />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1SecondPractise"
            android:text="@string/rb1"
            android:onClick="radioButtonEventHandler"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2SecondPractise"
            android:text="@string/rb2"
            android:onClick="radioButtonEventHandler"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3SecondPractise"
            android:text="@string/rb3"
            android:onClick="radioButtonEventHandler"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4SecondPractise"
            android:text="@string/rb4"
            android:onClick="radioButtonEventHandler"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5SecondPractise"
            android:text="@string/rb5"
            android:onClick="radioButtonEventHandler"/>

    </RadioGroup>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultButtonSecondPractise"
            android:text="Result"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextPractiseSecondPractise"
            android:text="@string/np"
            android:layout_toEndOf="@+id/resultButtonSecondPractise"
            android:layout_toRightOf="@+id/resultButtonSecondPractise"/>

    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultSecondPractise"
        android:text="@string/results"
        android:textAppearance="?android:textAppearanceLarge"
        android:gravity="center_horizontal"/>

</LinearLayout>
