<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/select_a_date"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:id="@+id/selectDateLabel"
        android:textAppearance="?android:textAppearanceLarge"
        />

        <TextView
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:hint="yyyy/MM/dd"
            android:id="@+id/resultDate"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_toRightOf="@+id/selectDateLabel"
            android:gravity="center" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/select_a_time"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:id="@+id/selectTimeLabel"
        android:textAppearance="?android:textAppearanceLarge"
        />

        <TextView
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:hint="hh:mm"
            android:id="@+id/resultTime"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_toRightOf="@+id/selectTimeLabel"
            android:gravity="center" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Add"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/dateAddButton"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_selected_values"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/lastSelectedValuesTV"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>